tester/src/test/aya/failure/missing-field.aya.txt
In file $FILE:7:2 ->

  5 | 
  6 | \def make-pair (A, B : \Set) (a : A) (b : B) : Pair A B =>
  7 |   \new Pair A B { }
        ^---------------^
  
Error: Missing field(s): `fst`, `snd`
Tycking interrupted due to errors.
What are you doing?
